cabal-version:      2.4
name:               plutus-starter
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0
license-files: LICENSE
author:             Your name
maintainer:         Your email

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

library
    exposed-modules:
      Plutus.Abstract.State Plutus.Abstract.State.Select Plutus.Abstract.State.Update Plutus.Abstract.ContractResponse Plutus.Abstract.OutputValue Plutus.Abstract.TxUtils Plutus.Contracts.Service.FungibleToken Plutus.Contracts.Service.Oracle Plutus.Contracts.LendingPool.OnChain.Core Plutus.Contracts.LendingPool.OnChain.Core.Script Plutus.Contracts.LendingPool.OnChain.Core.Validator Plutus.Contracts.LendingPool.OnChain.Core.Logic Plutus.Contracts.LendingPool.OnChain.AToken Plutus.Contracts.LendingPool.OffChain.AToken Plutus.Contracts.LendingPool.OffChain.Info Plutus.Contracts.LendingPool.OffChain.Owner Plutus.Contracts.LendingPool.OffChain.State Plutus.Contracts.LendingPool.OffChain.User Plutus.PAB.Simulation Ext.Plutus.Ledger.Value Ext.Plutus.Ledger.Contexts
    build-depends:
      base >= 4.9 && < 5,
      aeson,
      bytestring,
      containers,
      text,
      freer-simple,
      freer-extras,
      prettyprinter,
      lens,
      -- Plutus:
      playground-common,
      plutus-contract,
      plutus-tx-plugin,
      plutus-tx,
      plutus-ledger,
      plutus-ledger-api,
      plutus-use-cases,
      plutus-pab
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options:
            -- See Plutus Tx readme
            -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

executable pab
  main-is: Main.hs
  hs-source-dirs: pab
  ghc-options:
    -threaded
  build-depends:
    base >= 4.9 && < 5,
    plutus-starter

executable owner-contract
  main-is: Main.hs
  hs-source-dirs: owner-contract
  ghc-options:
    -threaded
  build-depends:
    base >= 4.9 && < 5,
    text,
    plutus-starter,
    plutus-ledger-api,
    plutus-pab,
    plutus-tx

executable user-contract
  main-is: Main.hs
  hs-source-dirs: user-contract
  ghc-options:
    -threaded
  build-depends:
    base >= 4.9 && < 5,
    text,
    plutus-starter,
    plutus-ledger-api,
    plutus-pab,
    plutus-tx

executable pab-simulation
  main-is: Main.hs
  hs-source-dirs: pab-simulation
  ghc-options:
    -threaded
  build-depends:
    base >= 4.9 && < 5,
    plutus-starter

executable generate-purs
  main-is: Main.hs
  hs-source-dirs: generate-purs
  other-modules: AaveTypes
  ghc-options:
    -threaded
  build-depends:
    base >= 4.9 && < 5,
    aeson,
    directory,
    servant-purescript,
    filepath,
    servant-server,
    bytestring,
    aeson-pretty,
    freer-extras,
    lens,
    text,
    mtl,
    -- Plutus:
    plutus-ledger-api,
    purescript-bridge,
    playground-common,
    plutus-starter,
    plutus-pab,
    plutus-contract,
    plutus-use-cases,
    plutus-ledger,
    plutus-tx

test-suite test
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: test
    other-modules:
      Spec.Start Spec.Deposit Spec.Withdraw Spec.ProvideCollateral Spec.RevokeCollateral Spec.Borrow Spec.Repay Spec.Shared Utils.Data Utils.Trace Fixtures Fixtures.Symbol Fixtures.Aave Fixtures.Asset Fixtures.Init Fixtures.Wallet
    default-language: Haskell2010
    ghc-options: -Wall -Wnoncanonical-monad-instances
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities -rtsopts
                 -- See Plutus Tx readme
                 -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    build-depends:
        plutus-core -any,
        plutus-tx -any,
        plutus-contract -any,
        plutus-ledger -any,
        plutus-starter,
        plutus-ledger-api,
        plutus-tx-plugin
    build-depends:
        base >=4.9 && <5,
        aeson -any,
        bytestring -any,
        containers -any,
        data-default -any,
        freer-extras -any,
        hedgehog -any,
        prettyprinter -any,
        tasty -any,
        tasty-hunit -any,
        tasty-hedgehog >=0.2.0.0,
        tasty-golden -any,
        tasty-quickcheck -any,
        text -any,
        lens -any,
        mtl -any,
        row-types -any,
        QuickCheck -any,
        freer-simple -any,
        foldl -any,
        streaming -any
