cabal-version:      2.4
name:               plutus-starter
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0
license-files: LICENSE
author:             Your name
maintainer:         Your email

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
    default-language:   Haskell2010
    ghc-options:
      -Wall -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wredundant-constraints -Widentities -rtsopts
      -- See Plutus Tx readme
      -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      Ext.Plutus.Contracts.Currency
      Ext.Plutus.Ledger.Index
      Ext.Plutus.Ledger.Time
      Ext.Plutus.Ledger.Value
      Ext.Plutus.PAB.Webserver.Server
      Plutus.Abstract.ContractResponse
      Plutus.Abstract.Percentage
      Plutus.Abstract.PercentageInterface
      Plutus.Abstract.RemoteData
      Plutus.Contracts.NftMarketplace.Endpoints
      Plutus.Contracts.NftMarketplace.OffChain.ID
      Plutus.Contracts.NftMarketplace.OffChain.Info
      Plutus.Contracts.NftMarketplace.OffChain.Owner
      Plutus.Contracts.NftMarketplace.OffChain.Serialization
      Plutus.Contracts.NftMarketplace.OffChain.User
      Plutus.Contracts.NftMarketplace.OnChain.Core
      Plutus.Contracts.NftMarketplace.OnChain.Core.ID
      Plutus.Contracts.NftMarketplace.OnChain.Core.Marketplace
      Plutus.Contracts.NftMarketplace.OnChain.Core.NFT
      Plutus.Contracts.NftMarketplace.OnChain.Core.StateMachine
      Plutus.Contracts.Services.Sale
      Plutus.Contracts.Services.Sale.Core
      Plutus.Contracts.Services.Sale.Endpoints
      Plutus.Contracts.Services.Sale.StateMachine
      Plutus.PAB.Simulation
      Plutus.PAB.MarketplaceContracts
      -- testnet MVP version (without state machines)
      Plutus.AbstractTestnetMVP.TxUtils
      Plutus.AbstractTestnetMVP.OutputValue
      Plutus.TestnetMVP.OffChain.Info
      Plutus.TestnetMVP.OffChain.Owner
      Plutus.TestnetMVP.OffChain.User
      Plutus.TestnetMVP.OnChain.NFT
      Plutus.TestnetMVP.OnChain.Script
      Plutus.TestnetMVP.OnChain.Validator
      Plutus.TestnetMVP.OffChain.Endpoints
      Plutus.TestnetMVP.PAB.MarketplaceContracts
      Plutus.TestnetMVP.PAB.Simulation
      Plutus.TestnetMVP.Services.Sale.Endpoints
      Plutus.TestnetMVP.Services.Sale.Script
      Plutus.TestnetMVP.Services.Sale.Validator

    build-depends:
      QuickCheck,
      aeson,
      base >= 4.9 && < 5,
      time,
      avro,
      bytestring,
      containers,
      cryptonite,
      data-default,
      freer-extras,
      freer-simple,
      lens,
      memory,
      prettyprinter,
      semigroups,
      servant-options,
      servant-server,
      servant-client,
      http-client,
      text,
      wai-cors,
      openapi3 -any,
      -- Plutus:
      cardano-api,
      playground-common,
      plutus-contract,
      plutus-ledger,
      plutus-ledger-api,
      plutus-ledger-constraints,
      plutus-pab,
      plutus-tx,
      plutus-tx-plugin,
      plutus-use-cases
    hs-source-dirs: src

executable pab-demo
  import: lang
  main-is: Main.hs
  hs-source-dirs: pab-demo
  ghc-options:
    -threaded
  build-depends:
    base >= 4.9 && < 5,
    plutus-starter

executable pab-app
  import: lang
  main-is: Main.hs
  hs-source-dirs: pab-app
  ghc-options:
    -threaded
  build-depends:
    base >= 4.9 && < 5,
    plutus-starter,
    plutus-pab

executable pab-simulation
  import: lang
  main-is: Main.hs
  hs-source-dirs: pab-simulation
  ghc-options:
    -threaded
  build-depends:
    base >= 4.9 && < 5,
    plutus-starter

executable testnet-mvp-simulation
  import: lang
  main-is: Main.hs
  hs-source-dirs: testnet-mvp-simulation
  ghc-options:
    -threaded
  build-depends:
    base >= 4.9 && < 5,
    plutus-starter

-- executable generate-typescript
--   import: lang
--   main-is: Main.hs
--   hs-source-dirs: generate-typescript
--   ghc-options:
--     -threaded
--   build-depends:
--     base >= 4.9 && < 5,
--     aeson-typescript,
--     servant-purescript -any,
--     mtl,
--     directory,
--     lens,
--     aeson,
--     bytestring,
--     -- Plutus:
--     plutus-starter,
--     plutus-pab,
--     plutus-contract,
--     plutus-ledger-api,
--     plutus-tx
        
test-suite test
    import: lang
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: test
    other-modules:
      Abstract.Percentage
      Abstract.RemoteDataSpec
      Marketplace.Fixtures
      Marketplace.Fixtures.CheckOptions
      Marketplace.Fixtures.NFT
      Marketplace.Fixtures.Script
      Marketplace.Fixtures.Wallet
      Marketplace.Spec.CreateNft
      Marketplace.Spec.Sale
      Marketplace.Spec.Start
      Utils
      Utils.Data
      Utils.Trace
    build-depends:
      plutus-contract -any,
      plutus-core -any,
      plutus-ledger -any,
      plutus-ledger-api,
      plutus-starter,
      plutus-tx -any,
      plutus-tx-plugin
    build-depends:
      QuickCheck -any,
      aeson -any,
      base >=4.9 && <5,
      bytestring -any,
      containers -any,
      data-default -any,
      foldl -any,
      freer-extras -any,
      freer-simple -any,
      hedgehog -any,
      lens -any,
      mtl -any,
      prettyprinter -any,
      quickcheck-properties -any,
      row-types -any,
      streaming -any,
      tasty -any,
      tasty-golden -any,
      tasty-hedgehog >=0.2.0.0,
      tasty-hunit -any,
      tasty-quickcheck -any,
      text -any