cabal-version:      2.4
name:               plutus-stable-coin
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0
license-files: LICENSE
author:             NodeFactory
maintainer:         mak@nodefactory.io

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

library
  hs-source-dirs:     src
  exposed-modules:
    NodeFactory.Plutus.Contracts.Oracle.Core
    NodeFactory.Plutus.Contracts.Oracle.Funds
    NodeFactory.Plutus.Contracts.Oracle.PAB
    NodeFactory.Plutus.Contracts.Oracle.Swap
    NodeFactory.Plutus.Contracts.StableCoin
    NodeFactory.Plutus.Contracts.Coin
  build-depends:      aeson
                    , base ^>=4.14.1.0
                    , containers
                    , data-default
                    , freer-extras
                    , playground-common
                    , plutus-contract
                    , plutus-ledger
                    , plutus-ledger-api
                    , plutus-tx-plugin
                    , plutus-tx
                    , plutus-use-cases
                    , prettyprinter
                    , text
  default-language:   Haskell2010
  ghc-options:        -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable oracle-pab
  main-is: oracle-pab.hs
  hs-source-dirs:     app
  ghc-options:        -Wall -threaded
  build-depends:      aeson
                    , base ^>= 4.14.1.0
                    , freer-extras
                    , freer-simple
                    , plutus-contract
                    , plutus-ledger
                    , plutus-pab
                    , plutus-stable-coin
                    , plutus-use-cases
                    , text

executable oracle-client
  main-is: oracle-client.hs
  hs-source-dirs:     app
  ghc-options:        -Wall
  build-depends:      base ^>= 4.14.1.0
                    , bytestring
                    , regex-tdfa ^>= 1.3.1.0
                    , req ^>= 3.9.0
                    , text
                    , uuid

executable swap-client
  main-is: swap-client.hs
  hs-source-dirs:     app
  ghc-options:        -Wall
  build-depends:      aeson
                    , base ^>= 4.14.1.0
                    , plutus-ledger
                    , plutus-pab
                    , plutus-stable-coin
                    , req ^>= 3.9.0
                    , text
                    , uuid
