cabal-version:      2.4
name:               plutus-stable-coin
version:            0.1.0.0
license: Apache-2.0
license-files: LICENSE
author:             NodeFactory
maintainer:         mak@nodefactory.io

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables
                        DeriveGeneric StandaloneDeriving DeriveLift
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable
    ghc-options: -Wall -Wnoncanonical-monad-instances
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities
                 -- See Plutus Tx readme
                 -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
  hs-source-dirs:     src
  exposed-modules:
    NodeFactory.Plutus.Contracts.Oracle.Core
    NodeFactory.Plutus.Contracts.Oracle.Funds
    NodeFactory.Plutus.Contracts.Oracle.PAB
    -- NodeFactory.Plutus.Contracts.Oracle.Swap
    NodeFactory.Plutus.Contracts.StableCoin.Types
    NodeFactory.Plutus.Contracts.StableCoin.OnChain
    NodeFactory.Plutus.Contracts.StableCoin.OffChain
  build-depends:      aeson
                    , base ^>=4.14.1.0
                    , containers
                    , data-default
                    , freer-extras
                    , playground-common
                    , plutus-contract
                    , plutus-ledger
                    , plutus-ledger-api
                    , plutus-tx-plugin
                    , plutus-tx
                    , plutus-use-cases
                    , prettyprinter
                    , text
  default-language:   Haskell2010
  default-extensions: ExplicitForAll ScopedTypeVariables
                        DeriveGeneric StandaloneDeriving DeriveLift
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable
  ghc-options:        -Wall -fobject-code -fno-ignore-interface-pragmas 
                      -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr 
                      -fno-specialise -Wnoncanonical-monad-instances
                      -Wincomplete-uni-patterns -Wincomplete-record-updates
                      -Wredundant-constraints -Widentities

executable oracle-pab
  main-is: oracle-pab.hs
  hs-source-dirs:     app
  ghc-options:        -Wall -threaded
  build-depends:      aeson
                    , base ^>= 4.14.1.0
                    , freer-extras
                    , freer-simple
                    , plutus-contract
                    , plutus-ledger
                    , plutus-pab
                    , plutus-stable-coin
                    , plutus-use-cases
                    , text

executable oracle-client
  main-is: oracle-client.hs
  hs-source-dirs:     app
  ghc-options:        -Wall
  build-depends:      base ^>= 4.14.1.0
                    , bytestring
                    , regex-tdfa ^>= 1.3.1.0
                    , req ^>= 3.9.0
                    , text
                    , uuid

executable swap-client
  main-is: swap-client.hs
  hs-source-dirs:     app
  ghc-options:        -Wall
  build-depends:      aeson
                    , base ^>= 4.14.1.0
                    , plutus-ledger
                    , plutus-pab
                    , plutus-stable-coin
                    , req ^>= 3.9.0
                    , text
                    , uuid
