cabal-version:      2.4
name:               plutus-market
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0
license-files: LICENSE
author:             Sudip Bhattarai
maintainer:         IOHK

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

library
    exposed-modules:
      -- Plutus.Contract.Wallet.Erc20
      Plutus.Contract.Wallet.Nft
      Plutus.Contract.Wallet.MarketPlace
      Plutus.Contract.Wallet.MarketEndpoints
      Plutus.Contract.Blockchain.MarketPlace
      Plutus.Contract.Wallet.EndpointModels
      Plutus.Contract.Blockchain.Nft
      Plutus.Contract.Wallet.Utils


    other-modules:
      Plutus.Contract.Data.Payment
      Plutus.Contract.Blockchain.Utils

    build-depends:
      base >= 4.9 && < 5,
      aeson,
      bytestring,
      playground-common,
      plutus-contract,
      plutus-tx-plugin,
      plutus-tx,
      plutus-ledger,
      lens,
      text,
      containers,
      utf8-string,
      freer-extras,
      string-conversions
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options:
            -- See Plutus Tx readme
            -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

test-suite market-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  other-modules:
    Test.Wallet.AuctionEndpointTest
    Test.Wallet.DirectSaleEndpointTest
    Test.Validator.MarketValidatorTest
    Test.ValidatorTestFramework
    Test.TestHelper
  default-language: Haskell2010
  ghc-options: -Wall -Wnoncanonical-monad-instances
              -Wincomplete-uni-patterns -Wincomplete-record-updates
              -Wredundant-constraints -Widentities -rtsopts
              -- See Plutus Tx readme
              -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
  build-depends:
    data-default -any,
    plutus-tx -any,
    plutus-tx-plugin,
    plutus-contract -any,
    plutus-ledger -any,
    plutus-ledger-api -any,
    plutus-market -any,
    plutus-pab -any,
    aeson -any,
    lens,
    text,
    containers,
    utf8-string,
    freer-extras,
    string-conversions,
  build-depends:
    base >=4.9 && <5,
    tasty -any,
    tasty-hunit -any,
    tasty-hedgehog >=0.2.0.0

executable market-simulation
  main-is: Main.hs
  hs-source-dirs: simulation
  ghc-options:
    -threaded
  default-language: Haskell2010
  build-depends:
    playground-common -any,
    data-default -any,
    base >= 4.9 && < 5,
    plutus-contract -any,
    plutus-pab -any,
    aeson -any,
    freer-simple -any,
    prettyprinter -any,
    freer-extras -any,
    plutus-ledger -any,
    plutus-market,
    text -any,
    containers -any,
    bytestring -any,
    prettyprinter -any

executable market-cli
  main-is: Main.hs
  hs-source-dirs: util
  ghc-options:  -threaded -rtsopts "-with-rtsopts=-T"
  default-language: Haskell2010
  build-depends:
      cardano-api
    , cardano-ledger-alonzo
    , plutus-ledger
    , plutus-ledger-api
    , bytestring
    ,  base >= 4.9 && < 5
    ,text-conversions,
    serialise -any,
    plutus-contract -any,
    plutus-pab -any,
    aeson -any,
    freer-simple -any,
    prettyprinter -any,
    freer-extras -any,
    plutus-market,
    text -any,
    containers -any,
    prettyprinter -any

